Dialog styles applied and custom data changes protected

--- a/src/app/main/data-input-dialog/data-input-dialog.component.html
+++ b/src/app/main/data-input-dialog/data-input-dialog.component.html
@@ -1,10 +1,12 @@
-<h1 mat-dialog-title>{{ 'CHART.DATA_INPUT' | oTranslate }}</h1>
-<div mat-dialog-content>
-  <mat-form-field appearance="fill">
-    <textarea matInput [(ngModel)]="data" placeholder="{{ 'CHART.DATA' | oTranslate }}" rows="10"></textarea>
-  </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onCancel()">{{ 'CANCEL' | oTranslate }}</button>
-  <button mat-button (click)="onSave()">{{ 'SAVE' | oTranslate }}</button>
+<div fxLayout="column" fxFill fxFlex="cacl(100% - 56px)">
+  <h1 mat-dialog-title>{{ 'CHART.DATA_INPUT' | oTranslate }}</h1>
+  <div mat-dialog-content fxFlex>
+    <mat-form-field appearance="fill">
+      <textarea matInput [(ngModel)]="data" placeholder="{{ 'CHART.DATA' | oTranslate }}"></textarea>
+    </mat-form-field>
+  </div>
+  <div mat-dialog-actions fxLayoutAlign="end">
+    <button mat-button (click)="onCancel()">{{ 'CANCEL' | oTranslate }}</button>
+    <button mat-button (click)="onSave()">{{ 'SAVE' | oTranslate }}</button>
+  </div>
 </div>
