modified dialog class

--- a/src/app/main/custom-chart/custom-chart.component.html
+++ b/src/app/main/custom-chart/custom-chart.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" class="bg-level-1 main-container">
   <example-comp comp-name="CUSTOM_CHART_TITLE">
-    <div #dialog mat-dialog-content class="dialog-container">
+    <div #dialog class="dialog-container">
       <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
         <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
           <div fxLayout="column" fxFill>
