--- a/src/app/main/data-input-dialog/data-input-dialog.component.html
+++ b/src/app/main/data-input-dialog/data-input-dialog.component.html
@@ -5,8 +5,10 @@
       <textarea matInput [(ngModel)]="data" placeholder="{{ 'CHART.DATA' | oTranslate }}"></textarea>
     </mat-form-field>
   </div>
-  <div mat-dialog-actions fxLayoutAlign="end">
-    <button mat-button (click)="onCancel()">{{ 'CANCEL' | oTranslate }}</button>
-    <button mat-button (click)="onSave()">{{ 'SAVE' | oTranslate }}</button>
-  </div>
+  <mat-dialog-actions align="end">
+    <button type="button" mat-stroked-button class="mat-primary" [mat-dialog-close]="false" (click)="onCancel()" class="o-button-default">
+      {{ 'CANCEL' | oTranslate }}</button>
+    <button type="button" mat-stroked-button class="mat-primary" (click)="onSave()" [mat-dialog-close]="true">
+      {{ 'SAVE' | oTranslate }}</button>
+  </mat-dialog-actions>
 </div>
