--- a/src/app/main/custom-chart/custom-chart.component.html
+++ b/src/app/main/custom-chart/custom-chart.component.html
@@ -4,8 +4,8 @@
       <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
         <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
           <div fxLayout="column" fxFill>
-            <o-button o-button (click)="opened=!opened" icon="menu" type="ICON" label=""
-              [matTooltip]="(sidenav.opened?'CHART.HIDE_FILTERS':'CHART.SHOW_FILTERS')">
+            <o-button o-button *ngIf="opened" (click)="opened=!opened" icon="menu" type="ICON" label=""
+              [matTooltip]="('CHART.HIDE_FILTERS' | oTranslate)">
             </o-button>
             <div fxLayout="column" *ngIf="opened" class="container-title" fxLayoutGap="10px">
               <mat-form-field>
@@ -15,7 +15,7 @@
                 <input [(ngModel)]="currentPreference.subtitle" matInput placeholder="{{ 'CHART.CHART_SUBTITLE' | oTranslate}}">
               </mat-form-field>
             </div>
-            <div fxLayout="column" class="data_options" fxLayoutGap="10px">
+            <div fxLayout="column" *ngIf="opened" class="data_options" fxLayoutGap="10px">
               <span class="section-first-title">{{ 'CHART.CHART_TYPE' | oTranslate}}</span>
               <mat-form-field>
                 <mat-label>{{'CHART.SELECT_TYPE' | oTranslate}}</mat-label>
@@ -122,7 +122,7 @@
           <div class="sidenav-container-content">
             <div>
               <o-button o-button *ngIf="!opened" class="sidenav-toggle-button" (click)="opened=!opened" icon="menu" type="ICON" label=""
-                [matTooltip]="(sidenav.opened?'CHART.HIDE_FILTERS':'CHART.SHOW_FILTERS')" matTooltipPosition="below">
+                [matTooltip]="('CHART.SHOW_FILTERS' | oTranslate)" matTooltipPosition="below">
               </o-button>
             </div>
             <div fxLayout="column" id="sidenav-container-content" fxFlex="1 1 auto">
