--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -6,7 +6,7 @@
         Ontimize Web Charts is a module that allows to you to integrate charts into an Ontimize Web application.
       </p>
       <p class="body-text">
-        Ontimize Web Charts is based on d3 libraries.
+        Ontimize Web Charts is based on ngx-chart.
       </p>
       <h3>Keep up to date</h3>
       <p class="body-text">
