Changed sidenav background color

--- a/src/app/main/custom-chart/custom-chart.component.scss
+++ b/src/app/main/custom-chart/custom-chart.component.scss
@@ -34,6 +34,7 @@
     visibility: visible !important;
     z-index: 999;
     border: 0;
+    background-color: transparent;
 
     .container-title {
       margin-top: 10px;
