Code component height changed and example code updated

--- a/src/app/main/custom-chart/custom-chart.component.html
+++ b/src/app/main/custom-chart/custom-chart.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" class="bg-level-1 main-container">
-  <example-comp comp-name="CUSTOM_CHART_TITLE" [files]="getFiles()" tab-height="300px" layout-fill>
+  <example-comp comp-name="CUSTOM_CHART_TITLE" [files]="getFiles()" layout-fill>
     <div #dialog class="dialog-container">
       <mat-sidenav-container class="mat-sidenav-container" [class.opened]="opened" fxFill>
         <mat-sidenav #sidenav [(opened)]="opened" mode="side" class="chart-on-demand-sidenav">
