--- a/src/app/main/custom-chart/custom-chart.component.scss
+++ b/src/app/main/custom-chart/custom-chart.component.scss
@@ -9,6 +9,13 @@
 
   >section {
     height: 98%;
+
+    highlight-comp {
+
+      >section {
+        height: 150px !important;
+      }
+    }
   }
 }
 
