--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.scss
@@ -1,3 +1,13 @@
 .dark-chart {
   fill: rgb(204, 204, 204);
 }
+
+ngx-charts-legend-entry {
+  > span {
+    padding: 0 3px 2px;
+
+    > .legend-label-color {
+      vertical-align: middle;
+    }
+  }
+}
