--- a/src/app/main/other-charts/pie/pie.component.html
+++ b/src/app/main/other-charts/pie/pie.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="row wrap" class="bg-level-1 main-container">
+<div fxLayout="row" class="bg-level-1 main-container">
   <example-comp comp-name="OTHER_CHARTS.PIE_BASIC" comp-desc="OTHER_CHARTS.PIE_BASIC.DESC" [files]="getBasicUsageFiles()" layout-fill fxFlex="50">
-    <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" [color]="colorScheme"></o-chart>
+    <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" [color]="colorScheme" show-legend="true"></o-chart>
   </example-comp>
 
   <example-comp comp-name="OTHER_CHARTS.PIE_CUSTOM" [files]="getCustomConfigurationFiles()" layout-fill fxFlex="50">
