--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -12,7 +12,7 @@
       <p class="body-text">
         Please refer to our changelog for up-to-date listings of all improvements and breaking changes.
       </p>
-      <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
+      <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/main.15.x/CHANGELOG.md" target="_blank">
         <o-button type="STROKED" label="CHANGELOG" layout-padding color="primary" icon="access_time"></o-button>
       </a>
       <h3>Related topics</h3>
