--- a/src/app/main/bar-chart/multi-bar-horizontal/multi-bar-horizontal.component.html
+++ b/src/app/main/bar-chart/multi-bar-horizontal/multi-bar-horizontal.component.html
@@ -1,7 +1,6 @@
 <div fxLayout="column" class="bg-level-1 main-container">
-<example-comp comp-name="BAR_CHAR.MULTIBAR_HORIZONTAL" comp-desc="BAR_CHAR.MULTIBAR_HORIZONTAL.DESC" [files]="getBasicUsageFiles()"
+  <example-comp comp-name="BAR_CHAR.MULTIBAR_HORIZONTAL" comp-desc="BAR_CHAR.MULTIBAR_HORIZONTAL.DESC" [files]="getBasicUsageFiles()" fxFlex="100"
     layout-fill>
-
-<o-chart type="multiBarHorizontalChart" [data]="data" x-label="Time" y-label="Amount (€)" x-data-type="time" [color]="colorScheme"></o-chart>
-</example-comp>
+    <o-chart type="multiBarHorizontalChart" [data]="data" x-label="Time" y-label="Amount (€)" x-data-type="time" [color]="colorScheme"></o-chart>
+  </example-comp>
 </div>
