[Quickstart-charts] [15.x.x] Added dynamic chart generator (#256)
* Added dynamic chart generator

* Data textarea styled to json format

* Protected some app errors and improved text area data field

* added dialog data

* Dialog styles applied and custom data changes protected

* modified dialog class

* modified dialog-actions

* Sidenav animation fixed

* Added code example and i18n updated

* Changed sidenav background color

* Added dinamic data example on custom chart component

* Dinamic code viewer ready

* Fixed sample code

* Fixed sample code

* Added missing import

* Added missing return

* Custom data formatted on typscript example

* Code chages

* Removed console errors while changin axis data type

* Updated hightlight definitions

* added json

* Axis types changes depending the chart type until the user opens the customize data dialog

* Code component height changed and example code updated

* modified donut and pie charts

* updated versions

* modified stacked area

* modified link

* Fixed html spaces

* Html code spaces added

* modified multi bar charts

---------

Co-authored-by: Javier Fernández Méndez <javier.fernandez@imatia.com>

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -6,13 +6,13 @@
         Ontimize Web Charts is a module that allows to you to integrate charts into an Ontimize Web application.
       </p>
       <p class="body-text">
-        Ontimize Web Charts is based on d3 libraries.
+        Ontimize Web Charts is based on ngx-chart.
       </p>
       <h3>Keep up to date</h3>
       <p class="body-text">
         Please refer to our changelog for up-to-date listings of all improvements and breaking changes.
       </p>
-      <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
+      <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/main.15.x/CHANGELOG.md" target="_blank">
         <o-button type="STROKED" label="CHANGELOG" layout-padding color="primary" icon="access_time"></o-button>
       </a>
       <h3>Related topics</h3>
